# gtfs-structure

./: Cargo.toml
src/: enums.rs  objects.rs  serde_helpers.rs
