[package]
description = "Read GTFS (public transit timetables) files"
name = "gtfs-structures"
version = "0.32.2"
authors = ["Tristram Gräbener <tristramg@gmail.com>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
repository = "https://github.com/rust-transit/gtfs-structure"
license = "MIT"
edition = "2018"

[features]
default = ["read-url"]
read-url = ["reqwest", "futures"]

[dependencies]
# deepsize = "0.2.0"
deepsize = { path = "../deepsize" }
bytes = "1"
csv = "1.1"
derivative = "2.1"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
itertools = "0.10"
sha2 = "0.10"
zip = "0.5"
thiserror = "1"
# rgb = "0.8"
rgb = { path = "../rust-rgb" }

futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", optional = true, features = ["blocking"]}

# druid = { git = "https://github.com/linebender/druid", features = ["im", "image", "png"] }
